add object name to view

--- a/src/Epistle/Views/Missive/Get.cshtml
+++ b/src/Epistle/Views/Missive/Get.cshtml
@@ -3,6 +3,10 @@
 @model Epistle.ActivityPub.Object
 
 <div>
+    @if(Model.Name is not null) 
+    {
+        <h1>@Model.Name</h1>
+    }
     @Html.Raw(Model.Content)
 </div>
 <hr>
