add meta robots tag to layout

--- a/src/Epistle/Views/Shared/_Layout.cshtml
+++ b/src/Epistle/Views/Shared/_Layout.cshtml
@@ -1,9 +1,17 @@
-﻿<!DOCTYPE html>
+﻿@{
+    var arachnophobic = config.GetValue<bool?>("Arachnophobic") ?? false;
+}
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    @if (arachnophobic)
+    {
+        <meta name="robots" content="noindex, nofollow, noarchive" />
+    }
     <title>@ViewData["Title"] - Epistle</title>
     <link rel="stylesheet" href="~/Epistle.styles.css" asp-append-version="true" />
 </head>
